# data-pipeline-template

./: .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt
config/: README.md  cluster.env.example  override-values.yaml
credential/: service-account.json.example
dags/: dag_example.py
dags/utils/: README.md  __init__.py  alert.py  constants.py
sbin/: README.md  build-docker.sh  common.sh  create-cluster.sh  create-nodepool.sh  install-chart.sh  install-ingress.sh  uninstall-chart.sh
