[tool.poetry]
name = "data-pipeline-template"
authors = ["y9yk <andrew.yk82@gmail.com>"]
description = ""
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
pendulum = "^2.1.2"
python = "3.8.15"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.12.0", allow-prereleases = true}
pylint = "^2.15.8"
apache-airflow = "2.2.1"
apache-airflow-providers-cncf-kubernetes = "3.1.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
